fix style issues

--- a/libs/book-store/books/src/lib/details/details.component.html
+++ b/libs/book-store/books/src/lib/details/details.component.html
@@ -1,6 +1,6 @@
-<div class="content" fxLayoutGap="grid" fxLayoutAlign="center">
-    <div fxLayout="row">
-        <div fxFlex="30%" class="center center">
+<div class="content" fxLayoutGap="grid">
+    <div fxLayout="row space-around">
+        <div fxFlex="30%" class="img-center">
             <img class="w-100" *ngIf="book?.imageLinks?.thumbnail" [src]="book?.imageLinks?.thumbnail" />
         </div>
         <div fxFlex="70%" class="right">
